clusters/takeout/apps/plex/statefulset-primary.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex
  labels:
    app: plex
spec:
  replicas: 1 # active longhorn
  selector:
    matchLabels:
      app: plex
  serviceName: plex
  template:
    metadata:
      annotations: {}
        # linkerd.io/inject: enabled
      labels:
        app: plex
    spec:
      # hostNetwork: true
      containers:
        - name: plex
          image: plexinc/pms-docker:latest
          imagePullPolicy: Always
          # command: ["tail","-f","/dev/null"]
          ports:
            - containerPort: 32400
          volumeMounts:
            - mountPath: "/braavos"
              name: braavos
            - mountPath: "/dev/dri"
              name: dri
            - mountPath: "/config"
              name: plex-config
            - mountPath: "/transcode"
              name: transcode
          # note to myself in the future: this is needed in order to use /dev/dri
          # there is an alternative but it's more work
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 6144Mi
      volumes:
        - name: braavos
          persistentVolumeClaim:
            claimName: braavos-media-pvc
        - name: dri
          persistentVolumeClaim:
            claimName: dri-pvc
        - name: transcode
          emptyDir: {}
            # medium: Memory
      nodeSelector:
        graphics: dri
        node.longhorn.io/create-default-disk: "true"
      imagePullSecrets:
        - name: docker-hub
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolume
      metadata:
        name: plex-config
      spec:
        accessModes:
          - ReadWriteOnce
        volumeMode: Filesystem
        storageClassName: longhorn
        resources:
          requests:
            storage: 40Gi
