clusters/takeout/apps/plex/statefulset-secondary.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex-secondary
  labels:
    app: plex-secondary
spec:
  replicas: 1 # active longhorn
  selector:
    matchLabels:
      app: plex-secondary
  serviceName: plex-secondary
  template:
    metadata:
      annotations: {}
      labels:
        app: plex-secondary
    spec:
      # hostNetwork: true
      containers:
        - name: plex-secondary
          image: plexinc/pms-docker:latest
          imagePullPolicy: Always
          command: ["tail","-f","/dev/null"]
          ports:
            - containerPort: 32400
          volumeMounts:
            - mountPath: "/braavos"
              name: braavos
            - mountPath: "/dev/dri"
              name: dri
            - mountPath: "/config"
              name: plex-secondary-config
            - mountPath: "/config-old"
              name: plex-secondary-config-old
            - mountPath: "/transcode"
              name: transcode
          # note to myself in the future: this is needed in order to use /dev/dri
          # there is an alternative but it's more work
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 8192Mi
      volumes:
        - name: braavos
          persistentVolumeClaim:
            claimName: braavos-media-pvc
        - name: warehouse
          persistentVolumeClaim:
            claimName: warehouse-media
        - name: plex-secondary-config-old
          persistentVolumeClaim:
            claimName: plex-secondary-config-plex-secondary-0
        - name: dri
          persistentVolumeClaim:
            claimName: dri-pvc
        - name: transcode
          emptyDir: {}
            # medium: Memory
      nodeSelector:
        graphics: dri
        longhorn: primary
      imagePullSecrets:
        - name: docker-hub
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: "kubernetes.io/hostname"
            labelSelector:
              matchExpressions:
                - key: app
                  operator: In
                  values:
                    - "plex"
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolume
      metadata:
        name: plex-secondary-config
      spec:
        accessModes:
          - ReadWriteMany
        volumeMode: Filesystem
        storageClassName: nfs-client
        resources:
          requests:
            storage: 1Gi
