clusters/takeout/apps/plex/service-primary.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  type: LoadBalancer
  selector:
    app: plex
  ports:
    - protocol: TCP
      port: 32400
      targetPort: 32400
