clusters/takeout/apps/plex/service-secondary.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-secondary
spec:
  type: LoadBalancer
  selector:
    app: plex-secondary
  ports:
    - protocol: TCP
      port: 32400
      targetPort: 32400
